# Project-Kronos

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX_INSTRUCTIONS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
KRONOS_FUTURES/source/: KRONOS_FUTURES.pine
architecture/: README.md
architecture/common/: README.md
architecture/constitution/: README.md
architecture/decisions/: README.md
architecture/intraday/: README.md
architecture/swing/: README.md
archive/: README.md
assets/: README.md
assets/diagrams/: README.md
assets/images/: README.md
assets/screenshots/: README.md
data/nse/: KRONOS_NSE_RELATIONSHIPS.csv  README.md
data/trades/: KRONOS_DAILY_REVIEW.csv  KRONOS_OBSERVATION_LEDGER.csv  KRONOS_SCREENSHOT_INDEX.csv  KRONOS_TRADE_LEDGER.csv  KRONOS_TRADE_LEDGER.xlsx  README.md
docs/: ARCHITECTURE.md  CodingStandards.md  Decisions.md  ENGINE_STATUS.md  EngineSpecifications.md  KRONOS-ID-CONVENTIONS.md  KRONOS-PROJECT-LIFECYCLE.md  KRONOS_ENGINEERING_MANUAL.md  README.md  Testing.md
docs/architecture/: ADL-001-Futures-Model.md  ADL-002-MCX-Self-Contained-Execution.md  ADL-003-Execution-Context-Adapters.md  ADL-004-Model-Trade-Ownership.md  ADL-005-Alert-Architecture.md  DATA_FLOW.md  ENGINE_OWNERSHIP.md  KNOWLEDGE_BASE.md  KR710_DETERMINISTIC_EXPLAINABILITY_SPEC.md  KR711_ACTION_ORIENTED_MESSAGING_SPEC.md  OVERVIEW.md  README.md
docs/governance/: DOCUMENTATION_GOVERNANCE.md
docs/validation/: README.md  (+8 more)
implementation/: README.md
research/: README.md
scripts/: generate_nse_relationship_mapping.py
validation/: README.md
(+332 files in other folders)
