[project]
name = "kronos"
version = "0.1.0"
description = "KRONOS Institutional Trading Platform"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Imran Ali" }
]
dependencies = [
    "kiteconnect>=5.2.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.11.31,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
